--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="plot"></div>
-    <script src="data.js"></script>
-    <script src="plots.js"></script>
+    <script src="resources/data.js"></script>
+    <script src="resources/plots.js"></script>
 </body>
 </html>
